# orphan-radar

./: .digital-asset-directory.yml  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  DESIGN_TRADEOFFS.md  DIGITAL_ASSET_DIRECTORY_HANDOFF.md  HANDOFF.md  LICENSE  PRIVACY.md  PROJECT_BRIEF.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.digital-asset/mail/: .gitignore  README.md
.githooks/: pre-push  pre-push.ps1
.github/workflows/: ci.yml
configs/: default_weights.json
demo_notes/: Agent Reliability.md  Ignore Scratchpad.md  Knowledge Graph Maintenance.md  Orphan - Duplicate Research.md  Orphan - Long Running Tests.md  Research Notes.md
docs/: FUTURE_ADAPTERS.md  INFORMATION_GAIN_SENSITIVITY.md  INFORMATION_THEORY_FRAMING.md  LINEAGE.md  ORPHANRANK.md  QUANTUM_ROADMAP.md  REDTEAM_INFORMATION_GAIN.md
evals/: demo_expected_results.md
examples/demo_notes/: AI Governance.md  Testing Strategy.md
scripts/: sweep_information_gain.py
src/ophan_radar/: cli.py
src/ophan_radar/core/: models.py  pipeline.py  settings.py
src/ophan_radar/eval/: link_reconstruction.py
src/ophan_radar/graph/: build_graph.py  communities.py
src/ophan_radar/ingest/: loader.py
src/ophan_radar/io/: jsonl.py  output_writer.py
src/ophan_radar/parse/: links.py  tags.py
src/ophan_radar/rank/: candidate_ranker.py  community_router.py  orphan_classifier.py  review_queue_ranker.py
src/orphan_radar/: cli.py
tests/: test_algorithms.py  test_information_gain.py  test_integrity.py  test_link_reconstruction.py  test_parser.py  test_pipeline.py
(+16 files in other folders)
