[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orphan-radar"
version = "0.1.0"
description = "Local-first engine for finding disconnected knowledge and generating reviewable graph-link suggestions."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Lowell Wong" }]
license = { text = "Apache-2.0" }
dependencies = [
  "networkx>=3.2",
  "scikit-learn>=1.4",
  "typer>=0.12",
  "pydantic>=2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.8"
]

[project.scripts]
orphan-radar = "orphan_radar.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
